@@ -1,10 +1,10 @@
 package org.example.hightrafficproject.controller;
 
 import jakarta.validation.Valid;
-import jakarta.validation.constraints.Min;
-import jakarta.validation.constraints.NotBlank;
-import jakarta.validation.constraints.NotNull;
 import lombok.RequiredArgsConstructor;
+import org.example.hightrafficproject.api.order.request.CreateOrderRequest;
+import org.example.hightrafficproject.api.order.response.CreateOrderResponse;
+import org.example.hightrafficproject.api.order.response.OrderDto;
 import org.example.hightrafficproject.entity.Order;
 import org.example.hightrafficproject.service.OrderService;
 import org.springframework.http.HttpStatus;
@@ -12,31 +12,12 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/orders")
 @RequiredArgsConstructor
 public class OrderController {
     private final OrderService orderService;
-
-    public static record CreateOrderRequest(
-            @NotBlank String userId,
-            @NotNull Long productId,
-            @Min(1) int quantity
-    ) {}
-
-    public static record CreateOrderResponse(Long orderId) {}
-
-    public static record OrderDto(
-            Long id,
-            String userId,
-            Long productId,
-            Integer quantity,
-            Long totalPrice,
-            java.time.Instant createdAt,
-            String status
-    ) {}
 
     @PostMapping
     public ResponseEntity<CreateOrderResponse> create(@Valid @RequestBody CreateOrderRequest request) {
@@ -47,16 +28,6 @@ public class OrderController {
     @GetMapping
     public List<OrderDto> getByUser(@RequestParam String userId) {
         List<Order> orders = orderService.getOrdersByUserId(userId);
-        return orders.stream()
-                .map(o -> new OrderDto(
-                        o.getId(),
-                        o.getUserId(),
-                        o.getProduct().getId(),
-                        o.getQuantity(),
-                        o.getTotalPrice(),
-                        o.getCreatedAt(),
-                        o.getStatus()
-                ))
-                .collect(Collectors.toList());
+        return orders.stream().map(OrderDto::from).toList();
     }
 }
